# KTB_Fund_Manager

./: .env.example  .gitignore  FEATURE_PROPOSALS.md  README.md  pyproject.toml  simple_backtest.py  test_openrouter.py
src/: backtest_real.py  backtest_v2.py  backtester.py  consensus_engine.py  main.py
src/agents/: __init__.py  ben_graham.py  cathie_wood.py  charlie_munger.py  fundamentals.py  michael_burry.py  peter_lynch.py  portfolio_manager.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
src/broker/: alpaca_paper.py
src/data/: alphavantage.py  unified_provider.py
src/graph/: state.py
src/utils/: __init__.py  analysts.py  display.py  llm.py  progress.py
