[tool.poetry]
name = "ktb-fund-manager"
version = "1.0.0"
description = "KTB Fund Manager - An AI-powered hedge fund simulation using free OpenRouter models"
authors = ["KTB <kboyle89@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"

# Core Framework
langchain = "^0.3.7"
langgraph = "^0.2"

# LLM Providers (OpenRouter compatible)
langchain-openai = "^0.3.5"

# OpenRouter works via OpenAI-compatible API
# No additional provider packages needed!

# Utils
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
rich = "^13.7.0"
pydantic = "^2.0"

# Date handling
python-dateutil = "^2.8.2"

# Data & Financial Analysis (optional but recommended)
# yfinance = "^0.2.0"  # Uncomment for Yahoo Finance data
# pandas = "^2.0"      # Uncomment for data analysis

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hedge-fund = "src.main:main"
backtest = "src.backtester:main"
